# dataset-gateway

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: docker.yml
aws/: Cargo.toml  api_gateway.tf  lambda.tf  main.tf  s3.tf
aws/src/: main.rs
dataset-gateway/: Cargo.toml
dataset-gateway/src/: config.rs
scripts/: build-rust.sh  deploy-aws.sh  deploy-tencent.sh
shared/: variables.tf
src/: config.rs  handlers.rs  main.rs  presign.rs  redis.rs  storage.rs
tencent/: api_gateway.tf  cos.tf  main.tf  scf.tf  scf_function.py
