[package]
name = "dataset-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
redis = { version = "0.24", features = ["tokio-comp", "rustls", "tokio-rustls-comp", "connection-manager"], default-features = false }
rustls = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1"
thiserror = "1"
aws-config = { version = "1", default-features = false, features = ["rustls"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
